--- a/lab1/index.html
+++ b/lab1/index.html
@@ -46,5 +46,15 @@
 
             <polygon class="red_rect" points="350,400 400,400 400,250 350,250"></polygon>
         </svg>
+
+        <svg width="400" height="400" id="line_line_chart">
+            <line x1="0" y1="400" x2="50" y2="300"></line>
+            <line x1="50" y1="300" x2="100" y2="300"></line>
+            <line x1="100" y1="300" x2="150" y2="200"></line>
+            <line x1="150" y1="200" x2="200" y2="200"></line>
+            <line x1="200" y1="200" x2="250" y2="300"></line>
+            <line x1="250" y1="300" x2="300" y2="300"></line>
+            <line x1="300" y1="300" x2="350" y2="400"></line>
+        </svg>
     </body>
 </html>
