--- a/lab1/index.html
+++ b/lab1/index.html
@@ -48,13 +48,28 @@
         </svg>
 
         <svg width="400" height="400" id="line_line_chart">
-            <line x1="0" y1="400" x2="50" y2="300"></line>
-            <line x1="50" y1="300" x2="100" y2="300"></line>
-            <line x1="100" y1="300" x2="150" y2="200"></line>
-            <line x1="150" y1="200" x2="200" y2="200"></line>
-            <line x1="200" y1="200" x2="250" y2="300"></line>
-            <line x1="250" y1="300" x2="300" y2="300"></line>
-            <line x1="300" y1="300" x2="350" y2="400"></line>
+            <line x1="0" y1="400" x2="50" y2="250"></line>
+            <line x1="50" y1="250" x2="125" y2="250"></line>
+            <line x1="125" y1="250" x2="175" y2="175"></line>
+            <line x1="175" y1="175" x2="225" y2="175"></line>
+            <line x1="225" y1="175" x2="275" y2="250"></line>
+            <line x1="275" y1="250" x2="350" y2="250"></line>
+            <line x1="350" y1="250" x2="400" y2="400"></line>
+        </svg>
+
+        <svg width="400" height="400" id="path_line_chart">
+            <path d="
+                M 0,400
+                l 50,-150
+                h 75
+                l 50,-75
+                h 50
+                l 50,75
+                h 75
+                l 50,150
+                ">
+            </path>
+            
         </svg>
     </body>
 </html>
