--- a/lab1/cse5544.kubit.7.lab1.html
+++ b/lab1/cse5544.kubit.7.lab1.html
@@ -10,7 +10,8 @@
     <body>
         <h1>Eddie Kubit</h1>
         <h3>CSE 5544, Lab 1</h3>
-
+        <hr>
+        <h4>Blue Bar Chart</h4>
         <svg width="400" height="400" id="blue_bar_chart">
             <polygon class="blue_rect" points="0,400 50,400 50,250 0,250"></polygon>
 
@@ -29,6 +30,8 @@
             <polygon class="blue_rect" points="350,400 400,400 400,250 350,250"></polygon>
         </svg>
 
+        <hr>
+        <h4>Red Bar Chart</h4>
         <svg width="400" height="400" id="red_bar_chart">
             <polygon class="red_rect" points="0,400 50,400 50,250 0,250"></polygon>
 
@@ -46,7 +49,9 @@
 
             <polygon class="red_rect" points="350,400 400,400 400,250 350,250"></polygon>
         </svg>
+        <hr>
 
+        <h4>Line Chart with Lines</h4>
         <svg width="400" height="400" id="line_line_chart">
             <line x1="0" y1="400" x2="50" y2="250"></line>
             <line x1="50" y1="250" x2="125" y2="250"></line>
@@ -56,7 +61,9 @@
             <line x1="275" y1="250" x2="350" y2="250"></line>
             <line x1="350" y1="250" x2="400" y2="400"></line>
         </svg>
+        <hr>
 
+        <h4>Line Chart with Path</h4>
         <svg width="400" height="400" id="path_line_chart">
             <path d="
                 M 0,400
