--- a/lab2/lab2.kubit.7.html
+++ b/lab2/lab2.kubit.7.html
@@ -11,6 +11,16 @@
         <h2>CSE 5544, Lab 2</h2>
         <hr/>
 
-        
+        <svg width='500' height='500' id="scatterplot_1">
+
+        </svg>
+
+        <hr/>
+
+        <svg width='500' height='500' id="scatterplot_2">
+
+            <script src="script.js"></script>
+
+        </svg>
     </bodhy>
 </html>
