--- a/lab2/lab2.kubit.7.html
+++ b/lab2/lab2.kubit.7.html
@@ -20,6 +20,14 @@
 
         <svg width='500' height='500' id="scatterplot_2"></svg>
 
-        <script src="'script2.js"></script>
+        <script src="script2.js"></script>
+
+        <hr/>
+
+        <svg width="500" height="500" id="scatterplot_3"></svg>
+
+        <script src="script3.js"></script>
+
+        <hr/>
     </body>
 </html>
