--- a/lab3/lab3.kubit.7.html
+++ b/lab3/lab3.kubit.7.html
@@ -13,13 +13,19 @@
 
         <svg width='500' height='500' id="scatterplot_1"></svg>
 
+        <script src="script1.js"></script>
+
         <hr/>
 
         <svg width='500' height='500' id="scatterplot_2"></svg>
 
+        <script src="script2.js"></script>
+
         <hr/>
 
         <svg width="500" height="500" id="scatterplot_3"></svg>
+
+        <script src="script3.js"></script>
 
         <hr/>
 
