--- a/lab3/lab3.kubit.7.html
+++ b/lab3/lab3.kubit.7.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Eddie Kubit</h1>
+        <h1>Eddie Kubit.7</h1>
         <h2>CSE 5544, Lab 3</h2>
         <hr/>
 
