--- a/lab4/lab4.kubit.7.html
+++ b/lab4/lab4.kubit.7.html
@@ -18,7 +18,8 @@
 
         <script src="script1.js"></script>
 
-        <hr/>
-        
+        <button onclick= "displayData(1)">Color Map 1</button>
+        <button onclick = "displayData(2)">Color Map 2</button>
+        <button onclick = "displayData(3)">Color Map 3</button>
     </body>
 </html>
